@@ -21,11 +21,11 @@
   </p>
   <p>
     Sexo<br />
-    <%= select("hospede","sexo", %w[Masculino Feminino], {} , { :new => nil }) %>
+    <%= select("hospede","sexo", Hospede.generos , {} , { :new => nil }) %>
   </p>
   <p>
     Estado civil<br />
-    <%= select("hospede","estCivil", %w[Casado Solteiro Divorciado Viuvo], {} , { :new => nil }) %>
+    <%= select("hospede","estCivil", Hospede.estadosCivis , {} , { :new => nil }) %>
   </p>
   <p>
     <%= f.submit "Atualizar" %>
