@@ -1,3 +1,6 @@
+2009-05-01 Iuri Fernandes <iurifq@gmail.com>
+* Moved possible 'generos' and 'estados civis" from views to controllers.
+
 2009-05-02 Suzana Matos <suzana.mato@gmail.com>
 * Fixed combobox in Hospede:
 	- edit
